// Licensed to Cloudera, Inc. under one
// or more contributor license agreements.  See the NOTICE file
// distributed with this work for additional information
// regarding copyright ownership.  Cloudera, Inc. licenses this file
// to you under the Apache License, Version 2.0 (the
// 'License'); you may not use this file except in compliance
// with the License.  You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an 'AS IS' BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

import { shallowMount } from '@vue/test-utils';
import { Column } from 'components/HueTable';
import ColumnSelectorPanel from './ColumnSelectorPanel.vue';

describe('ColumnSelectorPanel.vue', () => {
  it('should render', () => {
    const wrapper = shallowMount(ColumnSelectorPanel, {
      propsData: {
        columns: [],
        visibleColumns: []
      }
    });
    expect(wrapper.element).toMatchSnapshot();
  });

  it('should render with checkboxes', () => {
    const columns = <Column[]>[
      { key: 'a', label: 'A' },
      { key: 'b', label: 'B' }
    ];
    const wrapper = shallowMount(ColumnSelectorPanel, {
      propsData: {
        columns,
        visibleColumns: [...columns]
      }
    });
    expect(wrapper.element).toMatchSnapshot();
  });
});
