// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColumnSelectorPanel.vue should render 1`] = `
<div
  class="column-selector-panel"
>
  <ul
    class="column-list"
  >
    <li>
      <input
        class="filter-box"
        placeholder="Filter"
        type="text"
      />
    </li>
    
    
  </ul>
  <div
    class="column-selector-actions"
  >
    <hue-button-stub
      type="button"
    />
  </div>
</div>
`;

exports[`ColumnSelectorPanel.vue should render with checkboxes 1`] = `
<div
  class="column-selector-panel"
>
  <ul
    class="column-list"
  >
    <li>
      <input
        class="filter-box"
        placeholder="Filter"
        type="text"
      />
    </li>
    
    <li>
      <label>
        <input
          type="checkbox"
        />
         A
      </label>
    </li>
    <li>
      <label>
        <input
          type="checkbox"
        />
         B
      </label>
    </li>
    
  </ul>
  <div
    class="column-selector-actions"
  >
    <hue-button-stub
      type="button"
    />
  </div>
</div>
`;
